--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch ./src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
@@ -20,7 +20,9 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "moment": "^2.30.1",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/node": "^24.10.1"
